# Copyright 2021 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

add_subdirectory("retimer")
add_subdirectory("tcpc")

cros_ec_library_include_directories(include)

zephyr_library_sources_ifdef(CONFIG_EMUL_ANX7452	emul_anx7452.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_KB8010		emul_kb8010.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_BB_RETIMER	emul_bb_retimer.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_BC12_DETECT_PI3USB9201	emul_pi3usb9201.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_BMA255		emul_bma255.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_BMA4XX		emul_bma4xx.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_BMI		emul_bmi.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_BMI		emul_bmi160.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_BMI		emul_bmi260.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_BMI		emul_bmi3xx.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_CLOCK_CONTROL	emul_clock_control.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_COMMON_I2C	emul_common_i2c.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_CROS_FLASH	emul_flash.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_FPC1025	emul_fpc1025.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_ICM42607	emul_icm42607.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_ISL923X	emul_isl923x.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_CHARGER_ISL9241 emul_isl9241.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_KB_RAW		emul_kb_raw.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_LIS2DW12	emul_lis2dw12.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_LN9310		emul_ln9310.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_LSM6DSO  emul_lsm6dso.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_PCT2075	emul_pct2075.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_PPC_NX20P348X	emul_nx20p348x.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_PPC_SYV682X	emul_syv682x.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_PS8743		emul_ps8743.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_SMBUS_ARA	emul_smbus_ara.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_REALTEK_RTS54_PDC	emul_realtek_rts54xx.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_KTU1125	emul_ktu1125.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_RT1739		emul_rt1739.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_RT9490		emul_rt9490.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_RTC		emul_rtc.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_SMART_BATTERY	emul_smart_battery.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_SM5803 	emul_sm5803.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_SN5S330	emul_sn5s330.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_TCS3400	emul_tcs3400.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_TUSB1064	emul_tusb1064.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_USB_MUX_AMD_FP6 emul_amd_fp6.c)
zephyr_library_sources_ifdef(CONFIG_EMUL_TOUCHPAD_ELAN	emul_touchpad_elan.c)
zephyr_library_sources_ifdef(CONFIG_GPIO_CONTROLLER_MOCK gpio_controller_mock.c)
zephyr_library_sources_ifdef(CONFIG_I2C_MOCK		i2c_mock.c)
zephyr_library_sources_ifdef(CONFIG_PWM_MOCK            pwm_mock.c)
zephyr_library_sources_ifdef(CONFIG_TACH_MOCK           tach_mock.c)
zephyr_library_sources_ifdef(CONFIG_VCMP_MOCK           vcmp_mock.c)
